Solteris: Auto dispelling & DS Hold
*Auto Dispell NPC buffs on Solteris Mobs (Solteris spell or item)
*Turn attack off/on, and hold pets for DS buff
*New Character INI field for dispelling
*Updated Sample character ini

Character ini changes:

[Solteris]
Dispell (On/Off)=On

***Big thank you to Roxenrox for helping to write/test this code !!!!***

--- a/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Abagaile_HiddenForest.ini
+++ b/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Abagaile_HiddenForest.ini
@@ -59,6 +59,7 @@ Pet Buff Combat (On/Off)=Off
 
 [Nukes]
 Main=Blazing Inferno Rk. II/Gem|7
+Main=Legendary Ring of the Sleeper (Tier 7)
 BigFire=
 FastFire=
 LureFire=
@@ -88,6 +89,7 @@ Long Burn=
 Full Burn=Glardien's Leather Bound Tunic (Tier 8)
 [Druid]
 Evac Spell=Exodus
+
 [Misc]
 Self Shrink (On/Off)=On
 Auto-Loot (On/Off)=Off
@@ -98,3 +100,6 @@ Custom Commands (On/Off)=Off
 Gather Mana (On/Off)=On
 Small Gather Mana (Pct)=60
 Large Gather Mana (Pct)=35
+
+[Solteris]
+Dispell (On/Off)=Off
