--- a/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Alphie_HiddenForest.ini
+++ b/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Alphie_HiddenForest.ini
@@ -19,6 +19,7 @@ Group Buff L1=
 Group Buff L47=
 [Life Support]
 Life Support=Powerful Silk Robe (Tier 6)/HealPct|20
+
 [Assist Settings]
 Assist Type (Melee/Ranged/Off)=Off
 Melee Stick Point=Behind
@@ -38,6 +39,7 @@ Pet Taunt (On/Off)=Off
 Pet Auto-Shrink (On/Off)=On
 Pet Summon Combat (On/Off)=Off
 Pet Buff Combat (On/Off)=Off
+
 [Nukes]
 Main=Flame Blaze Rk. II/Gem|3
 Main=Gelid Strike Rk. II/Gem|4
@@ -45,7 +47,7 @@ Main=Storm Strike Rk. II/Gem|6
 Main=Chaotic Detonation/Gem|1
 Main=Concussive Strike Rk. II/Gem|5
 Main=Ancient Frozen Staff of Power (Tier 2)
-Main=Dragon Soul Staff (Tier 10)
+Main=Dragon Soul Staff (Tier 8)
 Main=Dark Carmine Loop of Loathing (Tier 7)
 Main=Engraved Ethereal Bound Earring (Tier 9)
 
@@ -58,13 +60,17 @@ LureCold=
 BigMagic=
 FastMagic=
 LureMagic=
+
 [TargetAE]
 TargetAE=
+
 [PBAE]
 PBAE=
+
 [Debuffs]
 Debuff on Assist=
 Debuff on Command=
+
 [Burn]
 Quick Burn=Al`Kabor's Lost Robe (Tier 8)
 Long Burn=
@@ -72,17 +78,20 @@ Full Burn=Al`Kabor's Lost Robe (Tier 8)
 Full Burn=Immaculate Shining Metallic Robes (Tier 8)
 Full Burn=Prolonged Destruction
 Full Burn=Crystal of Potential II (Tier 3)
+
 [Wizard]
 Evac Spell=Exodus
 Auto-Harvest (On/Off)=On
 Harvest=Harvest of Druzzil
 Harvest=Insidious Harvest Rk. II
 Pyromancy (On/Off)=Off
+
 [Misc]
 MapNPC (On/Off)=Off
 Auto-Loot (On/Off)=Off
 Self Shrink (On/Off)=On
 Custom Commands (On/Off)=Off
+
 [Mana Recovery]
 Gather Mana (On/Off)=On
 Small Gather Mana (Pct)=60
@@ -92,3 +101,6 @@ Conversion Item=
 Conversion Min HP (Pct)=60
 Conversion Start (Pct)=80
 Conversion Start Combat (Pct)=30
+
+[Solteris]
+Dispell (On/Off)=On
