--- a/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Anjeni_HiddenForest.ini
+++ b/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Anjeni_HiddenForest.ini
@@ -80,3 +80,6 @@ Conversion Item=
 Conversion Min HP (Pct)=60
 Conversion Start (Pct)=80
 Conversion Start Combat (Pct)=30
+
+[Solteris]
+Dispell (On/Off)=Off
