--- a/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Fishytooth_HiddenForest.ini
+++ b/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Fishytooth_HiddenForest.ini
@@ -109,3 +109,6 @@ Custom Commands (On/Off)=Off
 Gather Mana (On/Off)=On
 Small Gather Mana (Pct)=60
 Large Gather Mana (Pct)=35
+
+[Solteris]
+Dispell (On/Off)=Off
