--- a/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Irontail_HiddenForest.ini
+++ b/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Irontail_HiddenForest.ini
@@ -76,5 +76,9 @@ Self Shrink (On/Off)=On
 Auto-Loot (On/Off)=Off
 MapNPC (On/Off)=On
 Custom Commands (On/Off)=Off
+
+[Solteris]
+Dispell (On/Off)=Off
+
 [PeaceCustomCommands]
 cmd01=
