--- a/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Meatsac_HiddenForest.ini
+++ b/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Meatsac_HiddenForest.ini
@@ -84,6 +84,9 @@ Gather Mana (On/Off)=On
 Small Gather Mana (Pct)=60
 Large Gather Mana (Pct)=35
 
+[Solteris]
+Dispell (On/Off)=Off
+
 
 [CombatCustomCommands]
 cmd00=
