--- a/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Muergan_HiddenForest.ini
+++ b/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Muergan_HiddenForest.ini
@@ -2,7 +2,7 @@
 Instant Buff=
 
 Self Buff=Armor of the Orc Destroyer/Gem|6
-Self Buff=Storm of Rallos/Gem|7
+Self Buff=Storm of Dranik/Gem|7
 Self Buff=Red Resistance Stone (Tier 3)
 Self Buff=Aged Grey Suede Boots (Tier 6)
 Self Buff=Band of the Gargoyle (Tier 7)
@@ -14,13 +14,16 @@ Combat Buff=
 Group Buff=Brell's Barrier Rk. II/Gem|5
 Group Buff L1=
 Group Buff L47=
+
 [Cures]
 Cure=Shissar Empire Badge of Honor (Tier 1)/Muergan/CheckFor|Creeping Doom/MinSick|1
 CureAll=
 RadiantCure=Fulmination/MinSick|1/Zone|txevu
+
 [Life Support]
 Life Support=Blessing of Nameless Rk. II/Gem|3/HealPct|40
 Life Support=Lay on Hands/HealPct|20
+
 [Heals]
 Tank=
 Important Bot=
@@ -33,6 +36,7 @@ Heal Over Time Spell=
 Group Heal=Blessed Wave Rk. II/Gem|8/HealPct|60
 Who to Heal=Tanks/ImportantBots/All/Pets
 Who to HoT=
+
 [Assist Settings]
 Assist Type (Melee/Ranged/Off)=Off
 Melee Stick Point=Front
@@ -41,8 +45,10 @@ SmartTaunt(On/Off)=Off
 Melee Distance=2
 Ranged Distance=100
 Auto-Assist Engage Percent=
+
 [Melee Abilities]
 Ability=Bash
+
 [Pets]
 Pet Spell=
 Pet Heal=
@@ -51,6 +57,7 @@ Pet Taunt (On/Off)=Off
 Pet Auto-Shrink (On/Off)=On
 Pet Summon Combat (On/Off)=Off
 Pet Buff Combat (On/Off)=Off
+
 [Debuffs]
 Debuff on Assist=
 Debuff on Command=
@@ -58,25 +65,33 @@ Debuff on Command=
 
 [Nukes]
 Main=
+
 [Burn]
 Quick Burn=Ancient Frozen Sword of the Valiant (Tier 2)
 Quick Burn=Quindor, The Sunderer (Tier 10)
 Long Burn=
 Full Burn=
+
 [Paladin]
 Auto-Yaulp (On/Off)=Off
 Yaulp Spell=
+
 [Misc]
 Self Shrink (On/Off)=Off
 Auto-Loot (On/Off)=Off
 MapNPC (On/Off)=On
 Custom Commands (On/Off)=Off
+
 [Mana Recovery]
 Gather Mana (On/Off)=On
 Small Gather Mana (Pct)=60
 Large Gather Mana (Pct)=35
 
+[Solteris]
+Dispell (On/Off)=Off
+
 [CombatCustomCommands]
 cmd00=
+
 [PeaceCustomCommands]
 cmd00=
