--- a/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Pigs_HiddenForest.ini
+++ b/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Pigs_HiddenForest.ini
@@ -74,3 +74,6 @@ Self Shrink (On/Off)=On
 Auto-Loot (On/Off)=Off
 MapNPC (On/Off)=Off
 Custom Commands (On/Off)=Off
+
+[Solteris]
+Dispell (On/Off)=Off
