--- a/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Pooks_HiddenForest.ini
+++ b/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Pooks_HiddenForest.ini
@@ -77,3 +77,6 @@ Self Shrink (On/Off)=On
 Auto-Loot (On/Off)=On
 MapNPC (On/Off)=On
 Custom Commands (On/Off)=Off
+
+[Solteris]
+Dispell (On/Off)=Off
