Targeted AE spell Fix
*Allow Targets AE spells to cast.

***Important-place in character ini to use***

 [Ifs]
TargetAERange=${If[${Spawn[${Target}].Distance} > 25, 1, 0]}

Example:

[Nukes]
Main=Rain of Plasma/Gem|4/Ifs|TargetAERange

**Huge thank you to Roxenrox for the code

--- a/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Alphie_HiddenForest.ini
+++ b/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Alphie_HiddenForest.ini
@@ -3,13 +3,15 @@ Instant Buff=
 Self Buff=Ro's Flaming Familiar
 Self Buff=Kylong's Symbol (Tier 1)
 Self Buff=Ring of Wonder (Tier 2)
-Self Buff=Blue Resistance Stone (Tier 3)
 Self Buff=True Skin/Gem|7
 Self Buff=Resplendent Epaulets (Tier 5)
 Self Buff=Art of the Murkglider
 Self Buff=Dragon Wing Cloak (Tier 8)
-Self Buff=Robe of the Chaos Champion (Tier 8)
-Self Buff=Gemmed Spade of the Undertaker (Tier 9)
+Self Buff=Robe of the Chaos Champion (Tier 8)/CombatCast
+Self Buff=Gemmed Spade of the Undertaker (Tier 9)/CombatCast
+Self Buff=Lucid Wand of Turning (Tier 9)
+Self Buff=Lucid Robe of Luring Shadows (Tier 9)/CombatCast
+Self Buff=Sorcerer's Veil Rk. II/Gem|9/CombatCast
 |Self Buff=Badge of Uncontrollable Terror (Tier 7)
 
 Bot Buff=
@@ -29,6 +31,7 @@ Auto-Assist Engage Percent=98
 
 [Cures]
 Cure=Shissar Empire Badge of Honor (Tier 1)/Alphie/CheckFor|Creeping Doom/MinSick|1
+Cure=Shissar Empire Badge of Honor (Tier 1)/Alphie/CheckFor|Blight of Hate/MinSick|1
 CureAll=
 
 [Pets]
@@ -41,15 +44,17 @@ Pet Summon Combat (On/Off)=Off
 Pet Buff Combat (On/Off)=Off
 
 [Nukes]
-Main=Flame Blaze Rk. II/Gem|3
-Main=Gelid Strike Rk. II/Gem|4
-Main=Storm Strike Rk. II/Gem|6
+Main=Flame Blaze Rk. III/Gem|3
+Main=Gelid Strike Rk. III/Gem|4
+Main=Storm Strike Rk. III/Gem|6
 Main=Chaotic Detonation/Gem|1
-Main=Concussive Strike Rk. II/Gem|5
+Main=Concussive Strike Rk. III/Gem|5
 Main=Ancient Frozen Staff of Power (Tier 2)
 Main=Dragon Soul Staff (Tier 8)
-Main=Dark Carmine Loop of Loathing (Tier 7)
 Main=Engraved Ethereal Bound Earring (Tier 9)
+Main=Shield of Primordial Power (Tier 8)
+Main=Dark Carmine Loop of Loathing (Tier 7)
+
 
 BigFire=
 FastFire=
@@ -83,7 +88,7 @@ Full Burn=Crystal of Potential II (Tier 3)
 Evac Spell=Exodus
 Auto-Harvest (On/Off)=On
 Harvest=Harvest of Druzzil
-Harvest=Insidious Harvest Rk. II
+Harvest=Insidious Harvest Rk. III
 Pyromancy (On/Off)=Off
 
 [Misc]
@@ -96,11 +101,14 @@ Custom Commands (On/Off)=Off
 Gather Mana (On/Off)=On
 Small Gather Mana (Pct)=60
 Large Gather Mana (Pct)=30
-Conversion(HP>Mana) (On/Off)=Off
-Conversion Item=
-Conversion Min HP (Pct)=60
-Conversion Start (Pct)=80
-Conversion Start Combat (Pct)=30
+Conversion(HP>Mana) (On/Off)=On
+Conversion Item=Avilaine's Staff of Chaos (Tier 8)
+Conversion Min HP (Pct)=100
+Conversion Start (Pct)=70
+Conversion Start Combat (Pct)=50
 
 [Solteris]
 Dispell (On/Off)=On
+
+[Ifs]
+TargetAERange=${If[${Spawn[${Target}].Distance} > 25, 1, 0]}
