--- a/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Anjeni_HiddenForest.ini
+++ b/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Anjeni_HiddenForest.ini
@@ -1,16 +1,14 @@
 [Buffs]
 Instant Buff=
 Self Buff=Pantaloons of the Ignorant
-Self Buff=Dark Sanguine Cloak (Tier 7)
-Self Buff=Visions of Power Rk. II/Gem|9
+Self Buff=Dark Sanguine Cloak (Tier 7)/CombatCast
 Self Buff=Art of the Murkglider
 |Self Buff=Badge of Uncontrollable Terror (Tier 7)
-Bot Buff=Mana Inferno Rk. II/Alphie/Gem|8/CombatCast
-Bot Buff=Visions of Power Rk. II/Alphie/Gem|9/CombatCast
-Bot Buff=Mana Inferno Rk. II/Majuna/Gem|8/CombatCast
-Bot Buff=Mana Inferno Rk. II/Rory/Gem|8/CombatCast
+Bot Buff=Mana Inferno Rk. III/Alphie/Gem|8/CombatCast
+Bot Buff=Visions of Power Rk. III/Alphie/Gem|9/CombatCast
+Bot Buff=Mana Inferno Rk. III/Rory/Gem|8/CombatCast
 Combat Buff=
-Group Buff=Insight of the Seer Rk. II/Gem|6
+Group Buff=Insight of the Seer Rk. III/Gem|6
 Group Buff L1=
 Group Buff L47=
 Proc Buff (On/Off)=Off
@@ -29,6 +27,7 @@ Life Support=
 
 [Cures]
 Cure=Shissar Empire Badge of Honor (Tier 1)/Anjeni/CheckFor|Creeping Doom/MinSick|1
+Cure=Shissar Empire Badge of Honor (Tier 1)/Anjeni/CheckFor|Blight of Hate/MinSick|1
 CureAll=
 
 [Assist Settings]
@@ -38,20 +37,20 @@ Melee Distance=MaxMelee
 Ranged Distance=100
 Auto-Assist Engage Percent=98
 [Nukes]
-Main=Entwining Thoughts Rk. II/Gem|1
+Main=Entwining Thoughts Rk. III/Gem|1
 Main=Gloves of the Chaos Champion (Tier 8)
 Main=Vulthrix, The Warden's Whip (Tier 8)
 [DoTs on Assist]
 Main=
 Magic=
 [DoTs on Command]
-Main=Euphoric Noose RK. II/Gem|7
+Main=Euphoric Noose RK. III/Gem|7
 Magic=
 [Debuffs]
 Debuff on Assist=Ancient Frozen Staff of Eloquence (Tier 2)
 Debuff on Command=Wrath of the Phantasmist IV/Gem|2
-Debuff on Command=Overbearing Power Rk. II/Gem|3
-Debuff on Command=Euphoric Spasm Rk. II/Gem|5
+Debuff on Command=Overbearing Power Rk. III/Gem|3
+Debuff on Command=Euphoric Spasm Rk. III/Gem|5
 [TargetAE]
 TargetAE=
 [PBAE]
@@ -65,7 +64,7 @@ AutoRune (On/Off)=Off
 RuneTarget=
 RuneSpell=
 GatherMana Pct=80
-Mez Spell=Euphoric Bliss Rk. II/Gem|4
+Mez Spell=Euphoric Bliss Rk. III/Gem|4
 [Misc]
 Self Shrink (On/Off)=On
 Auto-Loot (On/Off)=Off
@@ -83,3 +82,6 @@ Conversion Start Combat (Pct)=30
 
 [Solteris]
 Dispell (On/Off)=Off
+
+[Ifs]
+TargetAERange=${If[${Spawn[${Target}].Distance} > 25, 1, 0]}
