--- a/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Majuna_HiddenForest.ini
+++ b/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Majuna_HiddenForest.ini
@@ -4,14 +4,16 @@ Instant Buff=
 Self Buff=Covenant of the Flamewielder Rk. II/Gem|6
 Self Buff=Xegony's Phantasmal Guard/Gem|5
 Self Buff=Resplendent Epaulets (Tier 5)
+Self Buff=Lucid Bracelet of the Shadow Hive (Tier 9)
+Self Buff=Lucid Wand of Turning (Tier 9)
 |Self Buff=Badge of Uncontrollable Terror (Tier 7)
-Bot Buff=Covenant of the Flamewielder Rk. II/Muergan/Gem|6
+Bot Buff=Covenant of the Flamewielder Rk. III/Muergan/Gem|6
 Combat Buff=
-Group Buff=Covenant of the Flamewielder Rk. II/Gem|6
+Group Buff=Covenant of the Flamewielder Rk. III/Gem|6
 Group Buff L1=
 Group Buff L47=
 [Pets]
-Pet Spell=Elemental Essence Rk. II/Gem|5
+Pet Spell=Elemental Essence Rk. III/Gem|5
 Pet Heal=Renewal of Chaos/Gem|9/HealPct|65
 Pet Buff=Aged Sarnak Channeler Staff (Tier 6)
 Pet Buff=Elemental Glory/Gem|7
@@ -27,6 +29,7 @@ Life Support=
 
 [Cures]
 Cure=Shissar Empire Badge of Honor (Tier 1)/Majuna/CheckFor|Creeping Doom/MinSick|1
+Cure=Shissar Empire Badge of Honor (Tier 1)/Majuna/CheckFor|Blight of Hate/MinSick|1
 CureAll=
 
 [Assist Settings]
@@ -36,8 +39,8 @@ Melee Distance=MaxMelee
 Ranged Distance=100
 Auto-Assist Engage Percent=98
 [Nukes]
-Main=Shawl of the Elements (Tier 8)
-Main=Bolt of Flaming Stone Rk. II/Gem|2
+Main=Bolt of Flaming Stone Rk. III/Gem|2
+Main=Drape of the Elements (Tier 9)
 BigFire=
 FastFire=
 LureFire=
@@ -46,7 +49,7 @@ FastMagic=
 LureMagic=
 [Debuffs]
 Debuff on Assist=
-Debuff on Command=Torrent of Malsoin Rk. II/Gem|4
+Debuff on Command=Torrent of Malsoin Rk. III/Gem|4
 [TargetAE]
 TargetAE=
 [PBAE]
@@ -63,7 +66,7 @@ Full Burn=Frenzied Burnout
 Long Burn=
 [Magician]
 Auto-Pet Weapons (On/Off)=On
-Summoned Pet Item=Summon: Ornaments of the Gods Rk. II/Gem|8
+Summoned Pet Item=Summon: Ornaments of the Gods Rk. III/Gem|8
 [Misc]
 Self Shrink (On/Off)=On
 Auto-Loot (On/Off)=Off
@@ -81,3 +84,6 @@ Conversion Start Combat (Pct)=30
 
 [Solteris]
 Dispell (On/Off)=Off
+
+[Ifs]
+TargetAERange=${If[${Spawn[${Target}].Distance} > 25, 1, 0]}
