--- a/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Rory_HiddenForest.ini
+++ b/E3_RoF2/Macros/e3 Bot Inis/Sample Ini/Rory_HiddenForest.ini
@@ -1,8 +1,8 @@
 [Buffs]
 Instant Buff=
 Self Buff=
-Bot Buff=Covenant of the Flamewielder Rk. II/Meatsac/Gem|6
-Bot Buff=Covenant of the Flamewielder Rk. II/Swiftwynd/Gem|6
+Bot Buff=Covenant of the Flamewielder Rk. III/Meatsac/Gem|6
+Bot Buff=Covenant of the Flamewielder Rk. III/Swiftwynd/Gem|6
 Combat Buff=Chaotic Veil of Fire/Muergan/Gem|5
 Group Buff=
 Group Buff L1=
@@ -24,6 +24,7 @@ Life Support=
 
 [Cures]
 Cure=Shissar Empire Badge of Honor (Tier 1)/Rory/CheckFor|Creeping Doom/MinSick|1
+Cure=Shissar Empire Badge of Honor (Tier 1)/Rory/CheckFor|Blight of Hate/MinSick|1
 CureAll=
 
 [Assist Settings]
@@ -34,7 +35,7 @@ Ranged Distance=100
 Auto-Assist Engage Percent=98
 [Nukes]
 Main=Shawl of the Elements (Tier 8)
-Main=Bolt of Flaming Stone Rk. I/Gem|2
+Main=Bolt of Flaming Stone Rk. III/Gem|2
 Main=Shield of Primordial Power (Tier 8)
 BigFire=
 FastFire=
@@ -78,3 +79,6 @@ Conversion Start Combat (Pct)=30
 
 [Solteris]
 Dispell (On/Off)=Off
+
+[Ifs]
+TargetAERange=${If[${Spawn[${Target}].Distance} > 25, 1, 0]}
