Fix for VT clickit
*Added new cords for VT globe to help fix clickit

***Thank you to Roxenrox for code !

--- a/E3_RoF2/Macros/e3 Macro Inis/doors.ini
+++ b/E3_RoF2/Macros/e3 Macro Inis/doors.ini
@@ -119,7 +119,6 @@ cobaltscar#1=36,890.086,-662.045,393.572,TFSWITCH200
 [codecay]
 codecay#1=3,0,0,-293.998,POTRANCOD500
 codecay#2=12,-89.5151,-1.58632,-95.124,CDROCKS507
-codecay#3=7,-221.752,-62.9035,-96.3682,CDTHRONE501
 [convorteum]
 convorteum#1=13,0,18,-45,OBJ_UNDERFOOT_PORTALDISC
 convorteum#2=14,7,1,-45.5,OBJ_UNDERFOOT_PORTALGUN
@@ -178,7 +177,6 @@ everfrost#3=3,-5457.7,-827.538,187.38,MIRPORTAL700
 everfrost#4=6,-5091,1816,-68.75,WBTENT700
 everfrost#5=7,-5053,1793,-64.5,WAYBROBNR700
 everfrost#6=8,-4725.26,2770.91,-105.899,MIRPORTAL701
-everfrost#7=87,-5105.15,1947.40,-59.37,PERBRICK
 [eviltree]
 eviltree#1=5,-814.5,-1010.75,44.3,OBJ_PORTAL_4STAGE
 eviltree#2=54,1114.77,-799.715,78.184,OBJ_CRYSTALSPIREB
@@ -279,7 +277,7 @@ guardian#6=15,-90.0506,558.696,-861.895,OBJ_PIPETELEPORTER
 [guildhall]
 guildhall#1=1,-3.4,-162.9,6.9,GUILD_DOOR
 guildhall#2=2,-3.4,-162.9,6.9,GUILD_DOOR
-guildhall#3=4,-75.88,-68.07,3.98,OBJ_FOYER_MAYONE
+guildhall#3=4,-3.4,-162.9,6.9,OBJ_GUILD_DOOR
 guildhall#4=5,-3.4,-162.9,6.9,OBJ_GUILD_DOOR
 [guildlobby]
 guildlobby#1=2,48.4,624.75,4.9,GUILD_DOOR_
@@ -969,8 +967,7 @@ potimeb#38=58,257.222,0.193956,0,TMGDDOOR500
 potimeb#39=59,256.008,39.6978,21.801,TMLEVER500
 potimeb#40=60,-267.451,0.2,344.901,TMGDDOOR500
 potimeb#41=61,-272.65,37.0826,365.395,TMLEVER500
-potimeb#42=62,1642.85,1110.6,367.952,POJTELE500
-potimeb#43=83,242.5,0,345.001,TMTLPRT500
+potimeb#42=83,242.5,0,345.001,TMTLPRT500
 [potorment]
 potorment#1=79,-241.977,1729.28,-475.922,POTORMFNT501
 potorment#2=80,-512.257,1815,-284.228,POTORDRS500
@@ -1057,7 +1054,8 @@ ruje#1=1,525.391,-1835.51,-224.145,RUJPORTAL700BE
 [rujf]
 rujf#1=1,-288.42,-565.339,-462.716,RUJPORTAL700BE
 [rujg]
-rujg#1=1,32.12,-173.23,152.43,OBJ_FOYER_MAYONE
+rujg#1=1,246.02,-1160.4,125.251,RUJPORTAL701E
+rujg#2=51,246.02,-1160.4,125.251,RUJPORTAL701E
 [rujh]
 rujh#1=1,656,-1250,-17.999,RUJPORTAL700BE
 [ruji]
@@ -1330,7 +1328,7 @@ txevu#1=23,1587.05,-27.6157,-288.999,NIHSTATUE800
 txevu#2=24,-343.698,-23.8592,-423.999,NIHSTATUE800
 txevu#3=25,-133.147,-211.468,-423.998,NIHSTATUE800
 [umbral]
-umbral#1=1,-749.884,-1912.31,150.002,UMDOOR301
+umbral#1=3,-1895.89,-742.04, 147.66,IT11200
 [uqua]
 uqua#1=16,11.5,-4,-27.999,UQSTAT800
 [veeshan]
